Update Bot.java